[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
    "rid-lib>=3.2.3",
    "koi-net",
    "PyGithub",
    "aiohttp",
    "rich" # Added for logging
]

[tool.setuptools]
package-dir = {"" = "."}